force-app/main/default/objects/Account/fields/Praharsh_Test__c.field-meta.xml
<CustomField>
    <fullName>Praharsh_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Praharsh Test</label>
    <type>Checkbox</type>
</CustomField>