force-app/main/default/objects/Account/fields/test3__c.field-meta.xml
<CustomField>
    <fullName>test3__c</fullName>
    <label>test3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>